--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="trabajo practico 3">
     <meta name="author" content="Nicolas Rafael Ortega">
     <meta name="keywords" content="JS, ARREGLOS, FUNCIONES">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
